0024164: Optimization of OCAF document closing OCAF document closing redesign. added 2 test scripts. removed commented method. added missed Draw commands.